estilos añadidos y query añadido a results

--- a/templates/results.html
+++ b/templates/results.html
@@ -6,7 +6,7 @@
     <title>Resultados de la Búsqueda</title>
 </head>
 <body>
-    <h1>Resultados de la Búsqueda</h1>
+    <h1>Resultados de la Búsqueda:  {{query}} </h1>
     <ul>
         {% for result in results %}
             <li><a href="/details/{{ result }}">{{ result }}</a></li>
