Se quitaron los resultados de stanford

--- a/templates/results.html
+++ b/templates/results.html
@@ -7,11 +7,13 @@
 </head>
 <body>
     <h1>Resultados de la Búsqueda:  {{query}} </h1>
+    {% if results %}
     <ul>
-        {% for result in results %}
-            <li><a href="/details/{{ result }}">{{ result }}</a></li>
-        {% endfor %}
+            {% for result in results %}
+                <li><a href="/details/{{ result }}">{{ result }}</a></li>
+            {% endfor %}
     </ul>
+    {% else %} <p>No se encontraron resultados.</p> {% endif %}
     <a href="/">Volver</a>
 </body>
 </html>
