anadiendo-funcionalidad-redireccion

--- a/templates/start.html
+++ b/templates/start.html
@@ -18,7 +18,7 @@
             <img src="../static/images/gato.gif" alt="Gato en laptop" class="gato">
         </main>
         <footer class="footer">
-            <button class="boton">Empezar a buscar</button>
+            <button class="boton" onclick="window.location.href='/index';">Empezar a buscar</button>
         </footer>
     </div>
 </body>
