--- a/templates/results.html
+++ b/templates/results.html
@@ -22,7 +22,7 @@
             {% else %}
                 <p>No se encontraron resultados.</p>
             {% endif %}
-            <a href="/" class="button">Volver</a>
+            <a href="/index" class="button">Volver</a>
         </main>
     </div>
 </body>
