--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,17 +1,45 @@
+html{
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
 body {
     display: flex;
     flex-direction: column;
+    background-color: #f3f3c8; 
     align-items: center;
     text-align: center;
     font-family: Arial, sans-serif;
+    margin: 0;
+}
+.cabecera{
+    width: 100%;
+    height: 150px;
+    background-image: url("../images/Biblioteca.jpg");
+}
+.contenedor{
+    
+    width: 100%;
+    height: auto;
+}
+.Titulo{
+    margin-top: 50px;
+    margin-bottom: 10px;
+    gap: 5px;
+}
+#libros{
+    width: 80px;
+    height: 80px;
 }
 form {
     display: flex;
-    flex-direction: column;
+   /* flex-direction: column;*/
     align-items: center;
+    justify-content: center;
     gap: 10px;
 }
 input {
-    width: 300px;
-    padding: 8px;
+    width: 500px;
+    padding: 10px;
 }
