--- a/static/css/results.css
+++ b/static/css/results.css
@@ -3,31 +3,55 @@ body {
     font-family: 'Arial', sans-serif;
     background-color: #f3f3c8; 
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
     height: 100vh;
 }
-
+html{
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+.cabecera{
+    width: 100%;
+    height: 150px;
+    background-image: url("../images/Biblioteca.jpg");
+}
+.contenedor{
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .container {
     width: 80%;
     max-width: 800px;
-    padding: 30px;
+    padding: 15px;
     background-color: #fff;
     border-radius: 20px; 
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
-    text-align: center;
+   /* text-align: center;*/
 }
 
-.header .titulo {
-    display: block;
-    margin: 0 auto 20px;
-    width: 100%;
-    max-width: 250px;
+.header {
+    display: flex;
+    justify-content: center;
+    margin: 20px;
+    
 }
-
+#libros{
+    width: 70px;
+    height: 70px;
+}
+#titulo{
+    width: 350px;
+    height: 60px;
+}
 h1 {
     color: #333;
-    margin-top: 20px;
+    font-size: 20px;
 }
 
 ul {
