--- a/templates/details.html
+++ b/templates/details.html
@@ -18,7 +18,7 @@
                 <li><strong>{{ predicate }}:</strong> {{ object }}</li>
                 {% endfor %}
             </ul>
-            <a class="button" href="/results">Volver</a>
+            <a class="button" href="/search">Volver</a>
         </div>
     </div>
 </body>
