--- a/static/css/results.css
+++ b/static/css/results.css
@@ -20,34 +20,73 @@ html{
 }
 .contenedor{
     width: 100%;
-    height: auto;
+    height: 100%;
+    display: flex;
+    padding-top: 15px;
+    /*flex-direction: column;
+    align-items: center;*/
+}
+.izquierda{
+    width: 30%;
+    
+}
+.header {
+    display: flex;
+    justify-content: flex-end;
+    margin: 20px;
+}
+#libros{
+    width: 60px;
+    height: 60px;
+}
+#titulo{
+    width: 270px;
+    height: 50px;
+}
+.contCastor{
+    display: flex;
+    margin-top: 80%;
+    justify-content: flex-end;
+    position: absolute;
+    bottom: 0;
+    left: -80px;
+}
+#castor{
+    width: 80px;
+    height: 70px;
+}
+.derecha{
+    width: 70%;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    margin-top: 15px;
 }
 .container {
     width: 80%;
+    /* min-height: 380px; */
     max-width: 800px;
     padding: 15px;
     background-color: #fff;
     border-radius: 20px; 
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
+    position: relative;
    /* text-align: center;*/
 }
-
-.header {
+.buscador{
+    height: 15%;
     display: flex;
-    justify-content: center;
-    margin: 20px;
-    
+    align-items: center;
 }
-#libros{
-    width: 70px;
-    height: 70px;
+form {
+    display: flex;
+   /* flex-direction: column;
+    align-items: center;
+    justify-content: center;*/
+    gap: 10px;
 }
-#titulo{
-    width: 350px;
-    height: 60px;
+input {
+    width: 700px;
+    padding: 15px;
 }
 h1 {
     color: #333;
@@ -71,22 +110,6 @@ a {
 
 a:hover {
     color: #0056b3;
-}
-
-.button {
-    display: inline-block;
-    margin-top: 20px;
-    padding: 10px 20px;
-    background-color: #93573d;
-    color: #fff;
-    text-decoration: none;
-    border-radius: 5px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    transition: background-color 0.3s;
-}
-
-.button:hover {
-    background-color: #7a4430;
 }
 
 p {
