--- a/templates/results.html
+++ b/templates/results.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +7,17 @@
 </head>
 <body>
     <h1>Resultados de la Búsqueda:  {{query}} </h1>
+    <h2>Resultados Locales</h2>
     <ul>
-        {% for result in results %}
-            <li><a href="/details/{{ result }}">{{ result }}</a></li>
+        {% for result in results.local %}
+        <li><a href="/details/{{ result }}"> {{result}} </a></li>
+        {% endfor %}
+    </ul>
+
+    <h2>Resultados de DBpedia</h2>
+    <ul>
+        {% for result in results.dbpedia %}
+        <li><a href="{{ result.resource }}">{{ result.label }}</a></li>
         {% endfor %}
     </ul>
     <a href="/">Volver</a>
