valor del imput

--- a/templates/results.html
+++ b/templates/results.html
@@ -19,7 +19,7 @@
         <section class="derecha">
             <div class="buscador">
                 <form action="/search" method="post">
-                    <input type="text" name="query" placeholder="¿Qué es lo que desea buscar?">
+                    <input type="text" name="query" value="{{ query }}" placeholder="¿Qué es lo que desea buscar?">
                     <button type="submit">Buscar</button>
                 </form>
             </div>
