mejorando tamaño de las letras del resultado

--- a/templates/results.html
+++ b/templates/results.html
@@ -24,7 +24,7 @@
                 </form>
             </div>
             <main class="container">
-                <h1>Resultados de la Búsqueda: {{ query }}</h1>
+                <h1>Resultados de la Búsqueda: "{{ query }}"</h1>
                 {% if results %}
                     <h2>Resultados Locales</h2>
                     <ul>
