--- a/static/css/results.css
+++ b/static/css/results.css
@@ -90,7 +90,11 @@ input {
 }
 h1 {
     color: #333;
-    font-size: 20px;
+    font-size: 18px;
+}
+h2{
+    color: #333;
+    font-size: 16px;
 }
 
 ul {
