--- a/static/css/results.css
+++ b/static/css/results.css
@@ -2,10 +2,6 @@ body {
     margin: 0;
     font-family: 'Arial', sans-serif;
     background-color: #f3f3c8; 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100vh;
 }
 html{
     width: 100%;
@@ -13,6 +9,7 @@ html{
     margin: 0;
     padding: 0;
 }
+
 .cabecera{
     width: 100%;
     height: 150px;
@@ -20,7 +17,6 @@ html{
 }
 .contenedor{
     width: 100%;
-    height: 100%;
     display: flex;
     padding-top: 15px;
     /*flex-direction: column;
@@ -57,12 +53,9 @@ html{
 }
 .derecha{
     width: 70%;
-    display: flex;
-    flex-direction: column;
-    margin-top: 15px;
+    margin: 15px 0 40px;
 }
 .container {
-    width: 80%;
     /* min-height: 380px; */
     max-width: 800px;
     padding: 15px;
@@ -70,25 +63,23 @@ html{
     border-radius: 20px; 
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
     position: relative;
-   /* text-align: center;*/
 }
 .buscador{
-    height: 15%;
-    display: flex;
-    align-items: center;
+    padding-top: 10px;
+    margin-bottom: 15px;
+    max-width: 820px;
 }
 form {
     display: flex;
-   /* flex-direction: column;
-    align-items: center;
-    justify-content: center;*/
-    gap: 10px;
+    gap: 5px;
 }
 input {
-    width: 700px;
-    padding: 15px;
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    box-sizing: border-box;
 }
-h1 {
+h2 {
     color: #333;
     font-size: 20px;
 }
