--- a/templates/results.html
+++ b/templates/results.html
@@ -48,15 +48,15 @@
                 {% endif %}
                 
                 <h2>DBpedia</h2>
-                {% if results.dbpedia %}
-                    <ul>
-                        {% for result in results.dbpedia %}
-                        <li><a href="{{ result.url }}">{{ result.title }}</a></li>
-                        {% endfor %}
-                    </ul>
-                {% else %}
-                    <p>No se encontraron resultados.</p>
-                {% endif %}
+                    {% if results.dbpedia %}
+                        <ul>
+                            {% for result in results.dbpedia %}
+                            <li><a href="/dbpedia_details/{{ result.title }}">{{ result.title }}</a></li>
+                            {% endfor %}
+                        </ul>
+                    {% else %}
+                        <p>No se encontraron resultados en DBpedia.</p>
+                    {% endif %}
 
                 <div class="contCastor">
                     <img src="../static/images/castor.png" alt="castorcito" id="castor">
