--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,45 +1,103 @@
-html{
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
+html {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 body {
-    display: flex;
-    flex-direction: column;
-    background-color: #f3f3c8; 
-    align-items: center;
-    text-align: center;
-    font-family: Arial, sans-serif;
-    margin: 0;
+  display: flex;
+  flex-direction: column;
+  background-color: #f3f3c8;
+  align-items: center;
+  text-align: center;
+  font-family: Arial, sans-serif;
+  margin: 0;
 }
-.cabecera{
-    width: 100%;
-    height: 150px;
-    background-image: url("../images/Biblioteca.jpg");
+.cabecera {
+  width: 100%;
+  height: 150px;
+  background-image: url("../images/Biblioteca.jpg");
 }
-.contenedor{
-    
-    width: 100%;
-    height: auto;
+.contenedor {
+  width: 100%;
+  height: auto;
 }
-.Titulo{
-    margin-top: 50px;
-    margin-bottom: 10px;
-    gap: 5px;
+.Titulo {
+  margin-top: 50px;
+  margin-bottom: 10px;
+  gap: 5px;
 }
-#libros{
-    width: 80px;
-    height: 80px;
+#libros {
+  width: 80px;
+  height: 80px;
 }
 form {
-    display: flex;
-   /* flex-direction: column;*/
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
+  display: flex;
+  /* flex-direction: column;*/
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
 }
 input {
-    width: 500px;
-    padding: 10px;
+  width: 500px;
+  padding: 10px;
+}
+
+.custom-select {
+  display: inline-block;
+  position: relative;
+  width: 120px;
+  cursor: pointer;
+}
+
+.selected-option {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px;
+  background-color: #fff;
+  border: 1px solid #000000;
+  border-radius: 5px;
+}
+
+.option-dentro {
+  padding-right: 12px; /*Lo arreglan*/
+}
+
+.selected-option img {
+  width: 22px;
+  height: 22px;
+}
+
+.options {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  z-index: 1;
+}
+
+.option {
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.option img {
+  width: 22px;
+  height: 22px;
+  margin-right: 10px;
+}
+
+.option:hover {
+  background-color: #f0f0f0;
+}
+
+.custom-select.open .options {
+  display: block;
 }
