--- a/static/css/results.css
+++ b/static/css/results.css
@@ -1,127 +1,185 @@
 body {
-    margin: 0;
-    font-family: 'Arial', sans-serif;
-    background-color: #f3f3c8; 
+  margin: 0;
+  font-family: "Arial", sans-serif;
+  background-color: #f3f3c8;
 }
-html{
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
+html {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
-.cabecera{
-    width: 100%;
-    height: 150px;
-    background-image: url("../images/Biblioteca.jpg");
+.cabecera {
+  width: 100%;
+  height: 150px;
+  background-image: url("../images/Biblioteca.jpg");
 }
-.contenedor{
-    width: 100%;
-    display: flex;
-    padding-top: 15px;
-    /*flex-direction: column;
+.contenedor {
+  width: 100%;
+  display: flex;
+  padding-top: 15px;
+  /*flex-direction: column;
     align-items: center;*/
 }
-.izquierda{
-    width: 30%;
-    
+.izquierda {
+  width: 30%;
 }
 .header {
-    display: flex;
-    justify-content: flex-end;
-    margin: 20px;
+  display: flex;
+  justify-content: flex-end;
+  margin: 20px;
 }
-#libros{
-    width: 60px;
-    height: 60px;
+#libros {
+  width: 60px;
+  height: 60px;
 }
-#titulo{
-    width: 270px;
-    height: 50px;
+#titulo {
+  width: 270px;
+  height: 50px;
 }
-.contCastor{
-    display: flex;
-    margin-top: 80%;
-    justify-content: flex-end;
-    position: absolute;
-    bottom: 0;
-    left: -80px;
+.contCastor {
+  display: flex;
+  margin-top: 80%;
+  justify-content: flex-end;
+  position: absolute;
+  bottom: 0;
+  left: -80px;
 }
-#castor{
-    width: 80px;
-    height: 70px;
+#castor {
+  width: 80px;
+  height: 70px;
 }
-.derecha{
-    width: 70%;
-    margin: 15px 0 40px;
+.derecha {
+  width: 70%;
+  margin: 15px 0 40px;
 }
 .container {
-    /* min-height: 380px; */
-    max-width: 800px;
-    padding: 15px;
-    background-color: #fff;
-    border-radius: 20px; 
-    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
-    position: relative;
+  /* min-height: 380px; */
+  max-width: 800px;
+  padding: 15px;
+  background-color: #fff;
+  border-radius: 20px;
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
+  position: relative;
 }
-.buscador{
-    padding-top: 10px;
-    margin-bottom: 15px;
-    max-width: 820px;
+.buscador {
+  padding-top: 10px;
+  margin-bottom: 15px;
+  max-width: 820px;
 }
 
-.opcion{
-    padding: 5px;
-    cursor: pointer;
+.opcion {
+  padding: 5px;
+  cursor: pointer;
 }
-.opcion:hover{
-    background-color: #f5f6f7;
+.opcion:hover {
+  background-color: #f5f6f7;
 }
 
 form {
-    display: flex;
-    gap: 5px;
+  display: flex;
+  gap: 5px;
 }
 input {
-    width: 100%;
-    padding: 10px;
-    font-size: 16px;
-    box-sizing: border-box;
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  box-sizing: border-box;
 }
 h2 {
-    color: #333;
-    font-size: 20px;
+  color: #333;
+  font-size: 20px;
 }
 
 ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
-.detalles{
-    font-size: 15px;
-    gap: 5px;
+.detalles {
+  font-size: 15px;
+  gap: 5px;
 }
 
 li {
-    margin: 0;
+  margin: 0;
 }
 
 a {
-    text-decoration: none;
-    color: #007BFF;
+  text-decoration: none;
+  color: #007bff;
 }
 
 a:hover {
-    color: #0056b3;
-    text-decoration:underline;
+  color: #0056b3;
+  text-decoration: underline;
 }
 
 p {
-    font-size: 18px;
-    margin: 0;
+  font-size: 18px;
+  margin: 0;
 }
 
-small{
-    font-weight: 600;
+small {
+  font-weight: 600;
+}
+
+.custom-select {
+  display: inline-block;
+  position: relative;
+  width: 150px;
+  cursor: pointer;
+}
+
+.selected-option {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px;
+  background-color: #fff;
+  border: 1px solid #000000;
+  border-radius: 5px;
+}
+
+.option-dentro {
+  padding-right: 12px; /*Lo arreglan*/
+}
+
+.selected-option img {
+  width: 22px;
+  height: 22px;
+}
+
+.options {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  z-index: 1;
+}
+
+.option {
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.option img {
+  width: 22px;
+  height: 22px;
+  margin-right: 10px;
+}
+
+.option:hover {
+  background-color: #f0f0f0;
+}
+
+.custom-select.open .options {
+  display: block;
 }
