--- a/templates/results.html
+++ b/templates/results.html
@@ -47,7 +47,7 @@
                 <p>No se encontraron resultados.</p> 
                 {% endif %}
                 
-                <h2>DBpedia</h2>
+                <h2>En linea</h2>
                     {% if results.dbpedia %}
                         <ul>
                             {% for result in results.dbpedia %}
